# rag-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
backend/: .dockerignore  Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251217_1834-3b1bc9eab499_init.py  20260102_1526-bd558156d6d5_chat_history.py  20260707_0001-add_content_hash_to_documents.py  20260717_0815-86f737c6bf1f_add_is_verified_to_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: ai.py  auth.py  conversations.py  documents.py  metrics.py  users.py
backend/app/core/: auth.py  celery_app.py  config.py  exceptions.py  middleware.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/eval/: __init__.py  __main__.py  configs.py  dataset.py  metrics.py  run.py  runner.py  sample_dataset.json
backend/app/models/: __init__.py  base.py  conversation.py  document.py  message.py  user.py
backend/app/rag/: __init__.py  chunker.py  embedder.py  hyde.py  ingest.py  reranker.py  retriever.py
backend/app/schemas/: ai.py  conversation.py  document.py  user.py
backend/app/services/: ai.py  chat.py  conversation.py  document.py  llm.py  user.py
backend/app/tasks/: __init__.py  document_indexing.py  ingestion.py
backend/app/utils/: document_extractor.py  metrics.py  storage.py  tracing.py  vector_db.py
backend/tests/: conftest.py  test_api.py
backend/tests/integration/: test_conversation.py  test_ingest.py  test_metrics_endpoint.py  test_retrieval.py
backend/tests/unit/: test_chunker.py  test_hyde.py  test_metrics.py  test_reranker.py  test_tracing.py
infra/: README.md  alb.tf  ecr.tf  ecs.tf  iam.tf  (+8 more)
(+55 files in other folders)
