[project]
name = "rag-platform"
version = "1.0.0"
description = "Production-ready RAG platform with FastAPI, PostgreSQL, Redis, and Qdrant"
requires-python = ">=3.12"
dependencies = [
    # FastAPI
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    # Database
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "aiosqlite==0.20.0",
    # Redis
    "redis==5.0.1",
    "celery==5.3.6",
    # Authentication
    "fastapi-users[sqlalchemy]==13.0.0",
    # Pydantic
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",
    # AI/ML
    "openai==1.10.0",
    # Vector DB
    "qdrant-client==1.7.3",
    # Rate Limiting
    "slowapi==0.1.9",
    # Utilities
    "python-dotenv==1.0.0",
    "httpx==0.26.0",
    "tenacity==8.2.3",
    # Document ingestion
    "pypdf==3.17.4",
    "python-docx==1.1.2",
    # Logging
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "ruff==0.8.0",
    "mypy==1.8.0",
    "pre-commit==3.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
